--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <div class="header-container">
       <h1>HKU Mathematics Courses</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="courses.html">Courses</a>
+        <a href="home.html">Home</a>
+        <a href="index.html">Courses</a>
         <a href="research.html">Research</a>
         <a href="people.html">People</a>
         <a href="contact.html">Contact</a>
