--- a/index.html
+++ b/index.html
@@ -158,12 +158,15 @@
     <div class="course-grid">
       <!-- Course 1 -->
       <div class="course-card">
-        <h3>MATH3901 - Stochastic Processes</h3>
+        <h3>MATH1013 University Mathematics II</h3>
         <div class="course-content">
-          <p>Introduction to Markov chains, Poisson processes, and Brownian motion with applications to finance.</p>
-          <div class="course-meta">
-            <span>Instructor: Prof. Zhang</span>
-            <span>Credits: 6</span>
+          <p>Difficulty: ★☆☆☆☆☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1xKwczsQKBBzWbHIMUlsLOuIMqfeM7jp9/view" class="notes-link">
+                Notes
+              </a>
+            </span>
           </div>
         </div>
       </div>
