--- a/index.html
+++ b/index.html
@@ -215,6 +215,335 @@
           </div>
         </div>
       </div>
+
+      <!-- Course 5 -->
+      <div class="course-card">
+        <h3>MATH2211 Multivariable Calculus</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★☆☆☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1syPpDx15tCH6Edaxq0S--ScAXoj641Lv/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 6 -->
+      <div class="course-card">
+        <h3>MATH2241 Introduction to Mathematical Analysis</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★☆☆☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1nJwpPgx_iD6rsFTWueBdIqf6eGqyRdu-/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 7 -->
+      <div class="course-card">
+        <h3>MATH3301 Algebra I</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1d7gsX-YPGC8MCD6UaVkmVlLPd9gid_1D/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 8 -->
+      <div class="course-card">
+        <h3>MATH3401 Analysis I</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1P8s7_IGMWj1oPlJzRBOGp9-HC7Qv9p2G/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 9 -->
+      <div class="course-card">
+        <h3>MATH3403 Functions of a Complex Variable</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1K5EO-I5hTlb2KSuNxnJGO-pulaoe04ir/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 10 -->
+      <div class="course-card">
+        <h3>MATH3405 Differential Equations</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/19EAtIe-nriRfwJH9bHz9O7odlXqk656H/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 11 -->
+      <div class="course-card">
+        <h3>MATH3541 Introduction to Topology</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1WKD8mmKfKfi-MYnm3NLEBZYORs3qvlSZ/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 12 -->
+      <div class="course-card">
+        <h3>MATH3600 Discrete Mathematics</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1g9u9NDxN0HnPu9bI3Fs-bjxedbL2Uf3O/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 13 -->
+      <div class="course-card">
+        <h3>MATH3601 Numerical Analysis</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1Su9JQhOyjTH_-nJ57TWrMXm9f1VHH4HQ/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 14 -->
+      <div class="course-card">
+        <h3>MATH3603 Probability Theory</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1iUYLyKYdKZWNSycU1-qTDLZE4dlzgSCO/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 15 -->
+      <div class="course-card">
+        <h3>MATH3901 Operations Research I</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1nXcUpfiNGoQbw5TmAT2q1xu-jc9OpOAR/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 16 -->
+      <div class="course-card">
+        <h3>MATH3904 Introduction to Optimization</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1wAEVqvP6n9rpoYLqpFUdMxzR4HIAqDl4/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 17 -->
+      <div class="course-card">
+        <h3>MATH3911 Game Theory and Strategy</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★☆☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1jr6-TyJ5tZBKI90awbgJ6bKe71VD5JD3/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 18 -->
+      <div class="course-card">
+        <h3>MATH4302 Algebra II</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1xRIpT2cPaUO64BzWrlu-chFP_kCjtLoI/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 19 -->
+      <div class="course-card">
+        <h3>MATH4402 Analysis II</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1PJJb1FD1lsB9EjAAeSTBxLVimHnhRuNe/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 20 -->
+      <div class="course-card">
+        <h3>MATH4402 Analysis II</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★★★☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1cYyo0CD0FRZFWCa6H8_-vJi7gE7Addfe/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 21 -->
+      <div class="course-card">
+        <h3>MATH4406 Introduction to Partial Differential Equations</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1cJA0XxhPrR5WL53Ko_VIYfheE5YaoDzc/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 22 -->
+      <div class="course-card">
+        <h3>MATH4501 Geometry</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★★★☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/18TwlGtj3nnlIIq51BI4c_XqfaUfESolC/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 23 -->
+      <div class="course-card">
+        <h3>MATH7101 Intermediate Complex Analysis</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★★★★</p>
+          <div class="course-note">
+            <span>
+              Under construction.
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 24 -->
+      <div class="course-card">
+        <h3>MATH7224 Topics in Advanced Probability Theory</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★★☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/10_3rUHRTlJuLBlDOlyVd7lnc2vI4u6AQ/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 25 -->
+      <div class="course-card">
+        <h3>MATH7502 Topics in Applied Discrete Mathematics</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★☆☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1iTKDDvDpQErNlHnOehphq8f_XP0D-AYF/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 26 -->
+      <div class="course-card">
+        <h3>MATH7505 Real Analysis</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★☆☆☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1Ri4qCvOjd4ruFTt9WqpxGcKZ6hGATWcA/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
       
       <!-- Add more courses as needed -->
     </div>
