--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
   
   <main>
     <div class="course-header">
-      <h2>Undergraduate Course Offerings</h2>
-      <p>Explore our comprehensive mathematics curriculum designed for future scholars</p>
+      <h2>Below is a list of lecture-based MATH classes when I was an undergraduate student. The notes are for math lovers and students who seek efficient ways to learn.</h2>
+      <p>Most of the notes are password-protected. Please contact me through billygood881@gmail.com if you wish to get them.</p>
     </div>
     
     <div class="course-grid">
@@ -443,21 +443,6 @@
 
       <!-- Course 20 -->
       <div class="course-card">
-        <h3>MATH4402 Analysis II</h3>
-        <div class="course-content">
-          <p>Difficulty: ★★★★★★★★★☆</p>
-          <div class="course-note">
-            <span>
-              <a href="https://drive.google.com/file/d/1cYyo0CD0FRZFWCa6H8_-vJi7gE7Addfe/view" class="notes-link">
-                Notes
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Course 21 -->
-      <div class="course-card">
         <h3>MATH4406 Introduction to Partial Differential Equations</h3>
         <div class="course-content">
           <p>Difficulty: ★★★★★★☆☆☆☆</p>
@@ -471,7 +456,7 @@
         </div>
       </div>
 
-      <!-- Course 22 -->
+      <!-- Course 21 -->
       <div class="course-card">
         <h3>MATH4501 Geometry</h3>
         <div class="course-content">
@@ -486,7 +471,7 @@
         </div>
       </div>
 
-      <!-- Course 23 -->
+      <!-- Course 22 -->
       <div class="course-card">
         <h3>MATH7101 Intermediate Complex Analysis</h3>
         <div class="course-content">
@@ -500,7 +485,7 @@
         </div>
       </div>
 
-      <!-- Course 24 -->
+      <!-- Course 23 -->
       <div class="course-card">
         <h3>MATH7224 Topics in Advanced Probability Theory</h3>
         <div class="course-content">
@@ -515,7 +500,7 @@
         </div>
       </div>
 
-      <!-- Course 25 -->
+      <!-- Course 24 -->
       <div class="course-card">
         <h3>MATH7502 Topics in Applied Discrete Mathematics</h3>
         <div class="course-content">
@@ -530,7 +515,7 @@
         </div>
       </div>
 
-      <!-- Course 26 -->
+      <!-- Course 25 -->
       <div class="course-card">
         <h3>MATH7505 Real Analysis</h3>
         <div class="course-content">
