--- a/index.html
+++ b/index.html
@@ -443,6 +443,21 @@
 
       <!-- Course 20 -->
       <div class="course-card">
+        <h3>MATH4404 Functional Analysis</h3>
+        <div class="course-content">
+          <p>Difficulty: ★★★★★★★★★☆</p>
+          <div class="course-note">
+            <span>
+              <a href="https://drive.google.com/file/d/1cYyo0CD0FRZFWCa6H8_-vJi7gE7Addfe/view" class="notes-link">
+                Notes
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Course 21 -->
+      <div class="course-card">
         <h3>MATH4406 Introduction to Partial Differential Equations</h3>
         <div class="course-content">
           <p>Difficulty: ★★★★★★☆☆☆☆</p>
@@ -456,7 +471,7 @@
         </div>
       </div>
 
-      <!-- Course 21 -->
+      <!-- Course 22 -->
       <div class="course-card">
         <h3>MATH4501 Geometry</h3>
         <div class="course-content">
@@ -471,7 +486,7 @@
         </div>
       </div>
 
-      <!-- Course 22 -->
+      <!-- Course 23 -->
       <div class="course-card">
         <h3>MATH7101 Intermediate Complex Analysis</h3>
         <div class="course-content">
@@ -485,7 +500,7 @@
         </div>
       </div>
 
-      <!-- Course 23 -->
+      <!-- Course 24 -->
       <div class="course-card">
         <h3>MATH7224 Topics in Advanced Probability Theory</h3>
         <div class="course-content">
@@ -500,7 +515,7 @@
         </div>
       </div>
 
-      <!-- Course 24 -->
+      <!-- Course 25 -->
       <div class="course-card">
         <h3>MATH7502 Topics in Applied Discrete Mathematics</h3>
         <div class="course-content">
@@ -515,7 +530,7 @@
         </div>
       </div>
 
-      <!-- Course 25 -->
+      <!-- Course 26 -->
       <div class="course-card">
         <h3>MATH7505 Real Analysis</h3>
         <div class="course-content">
