--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HKU Mathematics Department</title>
+  <title>My Homepage</title>
   <style>
     /* Modern Academic Style */
     :root {
@@ -125,7 +125,7 @@
 <body>
   <header>
     <div class="header-container">
-      <h1>HKU Mathematics</h1>
+      <h1>Hei Chun's Math World</h1>
       <nav>
         <a href="home.html">Home</a>
         <a href="index.html">Courses</a>
@@ -140,9 +140,8 @@
     <!-- Hero Section with Photo -->
     <section class="hero">
       <div class="hero-content">
-        <h2>Welcome to the Department of Mathematics</h2>
-        <p>Advancing mathematical knowledge through innovative research and world-class education since 1912.</p>
-        <a href="index.html" class="button">Explore Our Courses</a>
+        <h2>Welcome to my Homepage.</h2>
+        <p>This page is for sharing my journey studying mathematics and more. I am an M.Phil. student at HKUST. Prior to my study at HKUST, I got my B.Sc. (with First Class Honours) from HKU.</p>
       </div>
       <img src="images/math-building.jpg" alt="HKU Mathematics Building" class="profile-img">
     </section>
@@ -185,7 +184,7 @@
   </main>
   
   <footer>
-    <p>© 2023 Department of Mathematics, The University of Hong Kong. All rights reserved.</p>
+    <p>Created in July 2025</p>
   </footer>
 </body>
 </html>
