--- a/home.html
+++ b/home.html
@@ -143,13 +143,13 @@
         <h2>Welcome to my Homepage.</h2>
         <p>This page is for sharing my journey studying mathematics and more. I am an M.Phil. student at HKUST. Prior to my study at HKUST, I got my B.Sc. (with First Class Honours) from HKU.</p>
       </div>
-      <img src="images/math-building.jpg" alt="HKU Mathematics Building" class="profile-img">
+      <img src="Me at Shantou 2025.jpg" alt="Chaozhou 2025 April" class="profile-img">
     </section>
     
     <!-- About Section -->
     <section class="about-section">
       <h2>About the Department</h2>
-      <p>Our department brings together leading researchers in pure and applied mathematics, offering rigorous programs that prepare students for academic and professional success.</p>
+      <p>I love a broad range of mathematics. My current research lies in Enumerative Combinatorics.</p>
       
       <div class="interests">
         <div class="interest-card">
