--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
         <h2>Welcome to my Homepage.</h2>
         <p>This page is for sharing my journey studying mathematics and more. I am an M.Phil. student at HKUST. Prior to my study at HKUST, I got my B.Sc. (with First Class Honours) from HKU.</p>
       </div>
-      <img src="Me at Shantou 2025.jpg" alt="Chaozhou 2025 April" class="profile-img">
+      <img src="images/Me at Shantou 2025.jpg" alt="Chaozhou 2025 April" class="profile-img">
     </section>
     
     <!-- About Section -->
