--- a/home.html
+++ b/home.html
@@ -130,8 +130,6 @@
         <a href="home.html">Home</a>
         <a href="index.html">Courses</a>
         <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -149,37 +147,13 @@
     <!-- About Section -->
     <section class="about-section">
       <h2>About the Department</h2>
-      <p>I love a broad range of mathematics. My current research lies in Enumerative Combinatorics.</p>
+      <p>I love a broad range of mathematics. My current research lies in Enumerative Combinatorics. I served as the TA for the following course(s) at HKUST.</p>
       
       <div class="interests">
         <div class="interest-card">
-          <h3>Pure Mathematics</h3>
-          <p>Algebra, Number Theory, Geometry</p>
+          <h3>MATH2343 Discrete Structures</h3>
+          <p>2024-25 Spring</p>
         </div>
-        <div class="interest-card">
-          <h3>Applied Mathematics</h3>
-          <p>Mathematical Finance, Scientific Computing</p>
-        </div>
-        <div class="interest-card">
-          <h3>Statistics</h3>
-          <p>Data Science, Probability Theory</p>
-        </div>
-      </div>
-    </section>
-    
-    <!-- Faculty Spotlight -->
-    <section>
-      <h2>Faculty Spotlight</h2>
-      <div style="display: flex; gap: 2rem; margin-top: 1.5rem;">
-        <div style="text-align: center;">
-          <img src="images/prof1.jpg" alt="Professor Zhang" style="width: 150px; border-radius: 50%;">
-          <p><strong>Prof. Lin Zhang</strong><br>Algebraic Geometry</p>
-        </div>
-        <div style="text-align: center;">
-          <img src="images/prof2.jpg" alt="Professor Wong" style="width: 150px; border-radius: 50%;">
-          <p><strong>Prof. Mei Wong</strong><br>Mathematical Finance</p>
-        </div>
-      </div>
     </section>
   </main>
   
