--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
     
     <!-- About Section -->
     <section class="about-section">
-      <h2>About the Department</h2>
+      <h2>About Me</h2>
       <p>I love a broad range of mathematics. My current research lies in Enumerative Combinatorics. I served as the TA for the following course(s) at HKUST.</p>
       
       <div class="interests">
