--- a/index.html
+++ b/index.html
@@ -142,9 +142,6 @@
       <nav>
         <a href="home.html">Home</a>
         <a href="index.html">Courses</a>
-        <a href="research.html">Research</a>
-        <a href="people.html">People</a>
-        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -550,7 +547,7 @@
   </main>
   
   <footer>
-    <p>© 2025 Department of Mathematics, The University of Hong Kong. All rights reserved.</p>
+    <p>Created in July 2025</p>
   </footer>
 </body>
 </html>
