--- a/index.html
+++ b/index.html
@@ -490,7 +490,8 @@
           <p>Difficulty: ★★★★★★★★★★</p>
           <div class="course-note">
             <span>
-              Under construction.
+              <a href="https://drive.google.com/file/d/1RvmZS2EHoaFvUfZqj7-Ugu5ioLu3Gjao/view" class="notes-link">
+                Notes
               </a>
             </span>
           </div>
