--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Free Notes for HKU Mathematics Courses">
+  <meta name="keywords" content="HKU math, HKU mathematics courses, HKU math course notes, university math notes, undergraduate math notes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HKU Mathematics Courses</title>
   <style>
