--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <p>Difficulty: ★★★★★☆☆☆☆☆</p>
           <div class="course-note">
             <span>
-              <a href="https://drive.google.com/file/d/1d7gsX-YPGC8MCD6UaVkmVlLPd9gid_1D/view" class="notes-link">
+              <a href="https://drive.google.com/file/d/1vYlT_q6JJtjsh2Ivju2JaReKdZk9vqxs/view?usp=drive_link" class="notes-link">
                 Notes
               </a>
             </span>
