--- a/home.html
+++ b/home.html
@@ -131,6 +131,7 @@
       <nav>
         <a href="home.html">Home</a>
         <a href="index.html">Courses</a>
+        <a href="speculation.html">Courses</a>
       </nav>
     </div>
   </header>
