--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <nav>
         <a href="home.html">Home</a>
         <a href="index.html">Courses</a>
+        <a href="speculation.html">Speculation</a>
       </nav>
     </div>
   </header>
