--- a/speculation.html
+++ b/speculation.html
@@ -97,6 +97,7 @@
     </header>
     <main>
         <h2>Predictions</h2>
+        <p class="disclaimer">Disclaimer: My speculation does not constitute any investment/gambling advice.</p>
         <div id="predictionsList"></div>
     </main>
     <footer>
@@ -104,7 +105,7 @@
     </footer>
     <script>
         const predictions = [
-            { date: "9/7/2025", text: "Robhinhood (HOOD) will reach 120 the next trading day.", status: "true" },
+            { date: "9/7/2025", text: "Robhinhood (HOOD) will reach 120 the next trading day.", status: "unknown" },
             { date: "9/8/2025", text: "Nvidia will reach 180 by October 2025.", status: "unknown" }
         ];
 
