--- a/home.html
+++ b/home.html
@@ -156,6 +156,10 @@
           <h3>MATH2343 Discrete Structures</h3>
           <p>2024-25 Spring</p>
         </div>
+        <div class="interest-card">
+          <h3>MATH3121 Abstract Algebra</h3>
+          <p>2025-26 Fall</p>
+        </div>
     </section>
   </main>
   
