--- a/speculation.html
+++ b/speculation.html
@@ -105,8 +105,8 @@
     </footer>
     <script>
         const predictions = [
-            { date: "9/7/2025", text: "Robhinhood (HOOD) will reach 120 the next trading day.", status: "unknown" },
-            { date: "9/8/2025", text: "Nvidia will reach 180 by October 2025.", status: "unknown" }
+            { date: "9/8/2025", text: "Nvidia will rebound to 180 by October 2025.", status: "unknown" },
+            { date: "9/7/2025", text: "Robhinhood (HOOD) will reach 120 the next trading day.", status: "false" }
         ];
 
         function displayPredictions() {
