--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <p>Difficulty: ★★☆☆☆☆☆☆☆☆</p>
           <div class="course-note">
             <span>
-              <a href="https://drive.google.com/file/d/19MPjRlH7y0cYjjtsyIym-TUrcMR8Oyf8/view" class="notes-link">
+              <a href="https://drive.google.com/file/d/1UsrKGJyA2o4MKVJcWlkjoyrZ7Bw755wx/view?usp=sharing" class="notes-link">
                 Notes
               </a>
             </span>
