--- a/speculation.html
+++ b/speculation.html
@@ -105,7 +105,7 @@
     </footer>
     <script>
         const predictions = [
-            { date: "9/12/2025", text: "Manchester City will draw Manchester United in the premier league match on 9/14/2025.", status: "unknown" },
+            { date: "9/12/2025", text: "Manchester City will draw with Manchester United in the premier league match on 9/14/2025.", status: "unknown" },
             { date: "9/9/2025", text: "Oracle (ORCL) will drop the next trading day after earnings on 9/9/2025.", status: "false" },
             { date: "9/8/2025", text: "Nvidia (NVDA) will rebound to 180 by October 2025.", status: "true" },
             { date: "9/7/2025", text: "Robhinhood (HOOD) will reach 120 the next trading day.", status: "false" }
