--- a/speculation.html
+++ b/speculation.html
@@ -105,6 +105,7 @@
     </footer>
     <script>
         const predictions = [
+            { date: "9/25/2025", text: "Opendoor (OPEN) will reach 11 by October 2025", status: "unknown" },
             { date: "9/15/2025", text: "Hang Seng Index will reach 28000 by the end of 2025", status: "unknown" },
             { date: "9/12/2025", text: "Manchester City will draw with Manchester United in the premier league match on 9/14/2025.", status: "false" },
             { date: "9/9/2025", text: "Oracle (ORCL) will drop the next trading day after earnings on 9/9/2025.", status: "false" },
