--- a/speculation.html
+++ b/speculation.html
@@ -99,6 +99,13 @@
         <h2>Predictions</h2>
         <p class="disclaimer">Disclaimer: My speculation does not constitute any investment/gambling advice.</p>
         <div id="predictionsList"></div>
+        <div style="text-align: center; margin: 20px 0;">
+    <a href="https://www.paypal.com/sdk/js?client-id=BAA7oIez1d_3lUlNF6e97iZzrhNr7B43N9kg8Gp0ZspCbmFIG079Z60gw9qsL8Y7YI1ucq1c2QS7XfYeEE&components=hosted-buttons&disable-funding=venmo&currency=HKD" target="_blank" style="text-decoration: none;">
+        <button style="background-color: #FFB000; color: white; border: none; border-radius: 5px; padding: 10px 20px; font-size: 16px; cursor: pointer;">
+            Buy Me a Coffee
+        </button>
+    </a>
+</div>
     </main>
     <footer>
         <p>Created in July 2025</p>
