--- a/speculation.html
+++ b/speculation.html
@@ -100,11 +100,12 @@
         <p class="disclaimer">Disclaimer: My speculation does not constitute any investment/gambling advice.</p>
         <div id="predictionsList"></div>
         <div style="text-align: center; margin: 20px 0;">
-    <a href="https://www.paypal.com/sdk/js?client-id=BAA7oIez1d_3lUlNF6e97iZzrhNr7B43N9kg8Gp0ZspCbmFIG079Z60gw9qsL8Y7YI1ucq1c2QS7XfYeEE&components=hosted-buttons&disable-funding=venmo&currency=HKD" target="_blank" style="text-decoration: none;">
-        <button style="background-color: #FFB000; color: white; border: none; border-radius: 5px; padding: 10px 20px; font-size: 16px; cursor: pointer;">
-            Buy Me a Coffee
-        </button>
-    </a>
+   <style>.pp-EY7AVHS7CDDQ4{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/EY7AVHS7CDDQ4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-EY7AVHS7CDDQ4" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
 </div>
     </main>
     <footer>
