--- a/speculation.html
+++ b/speculation.html
@@ -132,6 +132,7 @@
     </footer>
     <script>
         const predictions = [
+            { date: "11/4/2025", text: "Advanced Micro Devices Inc (AMD) will reach 320 by the end of 2025", status: "unknown" },
             { date: "10/12/2025", text: "MP Materials (MP) will reach 100 by 12 November 2025", status: "true" },
             { date: "9/25/2025", text: "Opendoor (OPEN) will reach 11 by October 2025", status: "false" },
             { date: "9/15/2025", text: "Hang Seng Index will reach 28000 by the end of 2025", status: "unknown" },
