Add writings section to home.html
Added a new writings section with links to writings.

--- a/home.html
+++ b/home.html
@@ -101,6 +101,15 @@
       box-shadow: 0 3px 10px rgba(0,0,0,0.05);
     }
     
+    /* Writings Section */
+    .writings-section {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
+      margin-top: 3rem;
+    }
+
     footer {
       background-color: var(--dark);
       color: white;
@@ -160,6 +169,17 @@
           <h3>MATH3121 Abstract Algebra</h3>
           <p>2025-26 Fall</p>
         </div>
+      </div>
+    </section>
+
+    <!-- Writings Section -->
+    <section class="writings-section">
+      <h2>My Writings</h2>
+      <p>Here are some of my writings:</p>
+      <ul>
+        <li><a href="https://drive.google.com/file/d/1OHuRtQ2hAlk9sILxFuwB3YdT_WAfQHUe/view?usp=sharing" target="_blank">English Translation of Fonction de Möbius d'un groupe fini et anneau de Burnside</a></li>
+        <li><a href="https://drive.google.com/file/d/1-Ws9tCSiBIBDozrA9dSdmdJEHLSMinDK/view?usp=sharing" target="_blank">On the Feedback Capacity of Stationary Gaussian Channels</a></li>
+      </ul>
     </section>
   </main>
   
