--- a/home.html
+++ b/home.html
@@ -174,8 +174,7 @@
 
     <!-- Writings Section -->
     <section class="writings-section">
-      <h2>My Writings</h2>
-      <p>Here are some of my writings:</p>
+      <h2>My Writings (not publication)</h2>
       <ul>
         <li><a href="https://drive.google.com/file/d/1OHuRtQ2hAlk9sILxFuwB3YdT_WAfQHUe/view?usp=sharing" target="_blank">English Translation of Fonction de Möbius d'un groupe fini et anneau de Burnside</a></li>
         <li><a href="https://drive.google.com/file/d/1-Ws9tCSiBIBDozrA9dSdmdJEHLSMinDK/view?usp=sharing" target="_blank">On the Feedback Capacity of Stationary Gaussian Channels</a></li>
