Add advertisement modal for voting reminder
Added a modal for advertisement with voting information.

--- a/speculation.html
+++ b/speculation.html
@@ -127,6 +127,17 @@
         <div style="text-align: center; margin: 20px 0;">
         </div>
     </main>
+
+      <!-- Modal for Advertisement -->
+  <div id="adModal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>Please Vote on 7 Dec!</h2>
+      <img src="images/Kwok Ho King Poster.png" alt="Election Advertisement">
+      <p>Your vote is important! Let's make our voices heard in the HK Legco election!</p>
+    </div>
+  </div>
+    
     <footer>
         <p>Created in July 2025</p>
     </footer>
