--- a/index.html
+++ b/index.html
@@ -112,6 +112,30 @@
       margin-top: 3rem;
     }
 
+    /* Modal Styles */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1000; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: white;
+      margin: 5% auto; /* 15% from the top and centered */
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%; /* Could be more or less, depending on screen size */
+      text-align: center;
+    }
+
     .modal img {
       max-width: 100%;
       height: auto;
@@ -569,9 +593,44 @@
       <!-- Add more courses as needed -->
     </div>
   </main>
+
+  <!-- Modal for Advertisement -->
+  <div id="adModal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>Please Vote on 7 Dec!</h2>
+      <img src="path_to_your_image.jpg" alt="Election Advertisement">
+      <p>Your vote is important! Let's make our voices heard in the HK Legco election!</p>
+    </div>
+  </div>
   
   <footer>
     <p>Created in July 2025</p>
   </footer>
+  
+  <script>
+    // Get the modal
+    var modal = document.getElementById("adModal");
+    
+    // Show the modal
+    window.onload = function() {
+      modal.style.display = "block";
+    }
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementById("closeModal");
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 </body>
 </html>
