--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
       <h2>Please Vote on 7 Dec!</h2>
-      <img src="path_to_your_image.jpg" alt="Election Advertisement">
+      <img src="images/Kwok Ho King Poster.png" alt="Election Advertisement">
       <p>Your vote is important! Let's make our voices heard in the HK Legco election!</p>
     </div>
   </div>
