--- a/speculation.html
+++ b/speculation.html
@@ -147,7 +147,8 @@
     </footer>
     <script>
         const predictions = [
-            { date: "12/6/2025", text: "DAB will win 7 out of 20 seats in the HK LegCo Election Geographical Constituencies tomorrow", status: "unknown" },
+            { date: "12/8/2025", text: "Manchester City will win the 2025-26 Premier League", status: "unknown" },
+            { date: "12/6/2025", text: "DAB will win 7 out of 20 seats in the HK LegCo Election Geographical Constituencies tomorrow", status: "false" },
             { date: "11/4/2025", text: "Advanced Micro Devices Inc (AMD) will reach 320 by the end of 2025", status: "unknown" },
             { date: "10/12/2025", text: "MP Materials (MP) will reach 100 by 12 November 2025", status: "true" },
             { date: "9/25/2025", text: "Opendoor (OPEN) will reach 11 by October 2025", status: "false" },
