Update prediction status for Broadcom (AVGO)

--- a/speculation.html
+++ b/speculation.html
@@ -147,7 +147,7 @@
     </footer>
     <script>
         const predictions = [
-            { date: "12/11/2025", text: "Broadcom (AVGO) will drop after earnings on 12/11/2025", status: "unknown" },
+            { date: "12/11/2025", text: "Broadcom (AVGO) will drop after earnings on 12/11/2025", status: "true" },
             { date: "12/8/2025", text: "Manchester City will win the 2025-26 Premier League", status: "unknown" },
             { date: "12/6/2025", text: "DAB will win 7 out of 20 seats in the HK LegCo Election Geographical Constituencies tomorrow", status: "false" },
             { date: "11/4/2025", text: "Advanced Micro Devices Inc (AMD) will reach 320 by the end of 2025", status: "unknown" },
