--- a/speculation.html
+++ b/speculation.html
@@ -147,13 +147,14 @@
     </footer>
     <script>
         const predictions = [
+            { date: "1/1/2026", text: "Micron (MU) will reach 500 by the end of 2026", status: "unknown" },
             { date: "12/11/2025", text: "Broadcom (AVGO) will drop after earnings on 12/11/2025", status: "true" },
             { date: "12/8/2025", text: "Manchester City will win the 2025-26 Premier League", status: "unknown" },
             { date: "12/6/2025", text: "DAB will win 7 out of 20 seats in the HK LegCo Election Geographical Constituencies tomorrow", status: "false" },
-            { date: "11/4/2025", text: "Advanced Micro Devices Inc (AMD) will reach 320 by the end of 2025", status: "unknown" },
+            { date: "11/4/2025", text: "Advanced Micro Devices Inc (AMD) will reach 320 by the end of 2025", status: "false" },
             { date: "10/12/2025", text: "MP Materials (MP) will reach 100 by 12 November 2025", status: "true" },
             { date: "9/25/2025", text: "Opendoor (OPEN) will reach 11 by October 2025", status: "false" },
-            { date: "9/15/2025", text: "Hang Seng Index will reach 28000 by the end of 2025", status: "unknown" },
+            { date: "9/15/2025", text: "Hang Seng Index will reach 28000 by the end of 2025", status: "false" },
             { date: "9/12/2025", text: "Manchester City will draw with Manchester United in the premier league match on 9/14/2025.", status: "false" },
             { date: "9/9/2025", text: "Oracle (ORCL) will drop the next trading day after earnings on 9/9/2025.", status: "false" },
             { date: "9/8/2025", text: "Nvidia (NVDA) will rebound to 180 by October 2025.", status: "true" },
