--- a/Examsol.html
+++ b/Examsol.html
@@ -5,22 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insights to MATH Exams</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        p {
+            text-align: center;
+            color: #555;
+        }
+
+        .exam-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .exam-item {
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 20px;
+            text-align: center;
+            width: 200px;
+        }
+
+        .exam-item p {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Exam Practices for Sales</h1>
-<p>Welcome to our collection of exam practices, which contain our insights to past exam questions and sample exams. See how to purchase below!</p>
+<h1>Exam Practices for Sale</h1>
+<p>Welcome to our collection of exam practices, which contain insights to past exam questions and sample exams.</p>
 
-<ul>
-    <li><p>Insights to MATH1013 Exams- $100</p></li>
-    <li><p>Insights to MATH2012 Exams- $100</p></li>
-    <li><p>Insights to MATH2101 Exams- $100</p></li>
-    <li><p>Insights to MATH2102 Exams- $100</p></li>
-    <li><p>Insights to MATH2211 Exams- $100</p></li>
-    <li><p>Insights to MATH2241 Exams- $100</p></li>
-</ul>
+<div class="exam-list">
+    <div class="exam-item">
+        <p>Insights to MATH1013 University Mathematics II Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH2101 Linear Algebra I Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH2102 Linear Algebra II Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH2211 Multivariable Calculus Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH2241 Introduction to Mathematical Analysis Exams - $100</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH3403 Functions of a Complex Variable Exams - $90</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH3405 Differential Equations Exams - $90</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH3603 Probability Theory Exams - $90</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH3901 Operations Research I Exams - $50</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH3911 Game Theory and Strategy Exams - $80</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH4302 Algebra II Exams - $80</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH4402 Analysis II Exams - $80</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH4404 Functional Analysis Exams - $80</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH4501 Geometry Exams - $60</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH7502 Topics in Applied Discrete Mathematics Exams - $70</p>
+    </div>
+    <div class="exam-item">
+        <p>Insights to MATH7505 Real Analysis Exams - $70</p>
+    </div>
+</div>
 
-<p>Disclaimer: Our exam insights might contain flaws and they should not be treated as solution to past exams. You are welcomed to raise any questions about the insights to exams to billygood881@gmail.com.</p>
+<p class="footer">Disclaimer: Our exam insights might contain flaws and should not be treated as solutions to past exams. For inquiries, contact us at billygood881@gmail.com.</p>
 
 </body>
 </html>
