--- a/Examsol.html
+++ b/Examsol.html
@@ -59,7 +59,8 @@
 
 <div class="exam-list">
     <div class="exam-item">
-        <p>Insights to MATH1013 University Mathematics II Exams - $100</p>
+        <h2>Insights to MATH1013 University Mathematics II Exams - $100</h2>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
         <p>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - $100</p>
