Change paragraph tags to heading tags for exam insights

--- a/Examsol.html
+++ b/Examsol.html
@@ -59,56 +59,68 @@
 
 <div class="exam-list">
     <div class="exam-item">
-        <h2>Insights to MATH1013 University Mathematics II Exams - $100</h2>
+        <h3>Insights to MATH1013 University Mathematics II Exams - $100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - $100</p>
+        <h3>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - $100</h3>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH2101 Linear Algebra I Exams - $100</p>
+        <h3>Insights to MATH2101 Linear Algebra I Exams - $100</h3>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH2102 Linear Algebra II Exams - $100</p>
+        <h3>Insights to MATH2102 Linear Algebra II Exams - $100</h3>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH2211 Multivariable Calculus Exams - $100</p>
+        <h3>Insights to MATH2211 Multivariable Calculus Exams - $100</h3>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH2241 Introduction to Mathematical Analysis Exams - $100</p>
+        <h3>Insights to MATH2241 Introduction to Mathematical Analysis Exams - $100</h3>
+        <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH3403 Functions of a Complex Variable Exams - $90</p>
+        <h3>Insights to MATH3403 Functions of a Complex Variable Exams - $90</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH3405 Differential Equations Exams - $90</p>
+        <h3>Insights to MATH3405 Differential Equations Exams - $90</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH3603 Probability Theory Exams - $90</p>
+        <h3>Insights to MATH3603 Probability Theory Exams - $90</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH3901 Operations Research I Exams - $50</p>
+        <h3>Insights to MATH3901 Operations Research I Exams - $50</h3>
+        <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH3911 Game Theory and Strategy Exams - $80</p>
+        <h3>Insights to MATH3911 Game Theory and Strategy Exams - $80</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH4302 Algebra II Exams - $80</p>
+        <h3>Insights to MATH4302 Algebra II Exams - $80</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH4402 Analysis II Exams - $80</p>
+        <h3>Insights to MATH4402 Analysis II Exams - $80</h3>
+        <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH4404 Functional Analysis Exams - $80</p>
+        <h3>Insights to MATH4501 Geometry Exams - $60</h3>
+        <p>Currently contain 1 practice, will contain at least 5 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH4501 Geometry Exams - $60</p>
+        <h3>Insights to MATH7502 Topics in Applied Discrete Mathematics Exams - $70</h3>
+        <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <p>Insights to MATH7502 Topics in Applied Discrete Mathematics Exams - $70</p>
-    </div>
-    <div class="exam-item">
-        <p>Insights to MATH7505 Real Analysis Exams - $70</p>
+        <h3>Insights to MATH7505 Real Analysis Exams - $70</h3>
+        <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
 </div>
 
