--- a/Examsol.html
+++ b/Examsol.html
@@ -59,72 +59,76 @@
 
 <div class="exam-list">
     <div class="exam-item">
-        <h3>Insights to MATH1013 University Mathematics II Exams - $100</h3>
+        <h3>Insights to MATH1013 University Mathematics II Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - $100</h3>
+        <h3>Insights to MATH2012 Fundamental Concepts of Mathematics Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH2101 Linear Algebra I Exams - $100</h3>
+        <h3>Insights to MATH2101 Linear Algebra I Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH2102 Linear Algebra II Exams - $100</h3>
+        <h3>Insights to MATH2102 Linear Algebra II Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH2211 Multivariable Calculus Exams - $100</h3>
+        <h3>Insights to MATH2211 Multivariable Calculus Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH2241 Introduction to Mathematical Analysis Exams - $100</h3>
+        <h3>Insights to MATH2241 Introduction to Mathematical Analysis Exams - HK$100</h3>
         <p>Currently contain 1 practice, will contain at least 10 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH3403 Functions of a Complex Variable Exams - $90</h3>
+        <h3>Insights to MATH3403 Functions of a Complex Variable Exams - HK$90</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH3405 Differential Equations Exams - $90</h3>
+        <h3>Insights to MATH3405 Differential Equations Exams - HK$90</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH3603 Probability Theory Exams - $90</h3>
+        <h3>Insights to MATH3603 Probability Theory Exams - HK$90</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH3901 Operations Research I Exams - $50</h3>
+        <h3>Insights to MATH3901 Operations Research I Exams - HK$50</h3>
         <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH3911 Game Theory and Strategy Exams - $80</h3>
+        <h3>Insights to MATH3911 Game Theory and Strategy Exams - HK$80</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH4302 Algebra II Exams - $80</h3>
+        <h3>Insights to MATH4302 Algebra II Exams - HK$80</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH4402 Analysis II Exams - $80</h3>
+        <h3>Insights to MATH4402 Analysis II Exams - HK$80</h3>
         <p>Currently contain 1 practice, will contain at least 6 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH4501 Geometry Exams - $60</h3>
+        <h3>Insights to MATH4501 Geometry Exams - HK$60</h3>
         <p>Currently contain 1 practice, will contain at least 5 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH7502 Topics in Applied Discrete Mathematics Exams - $70</h3>
+        <h3>Insights to MATH7502 Topics in Applied Discrete Mathematics Exams - HK$70</h3>
         <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
     <div class="exam-item">
-        <h3>Insights to MATH7505 Real Analysis Exams - $70</h3>
+        <h3>Insights to MATH7505 Real Analysis Exams - HK$70</h3>
         <p>Currently contain 1 practice, will contain at least 4 practices by June 2026.</p>
     </div>
 </div>
 
-<p class="footer">Disclaimer: Our exam insights might contain flaws and should not be treated as solutions to past exams. For inquiries, contact us at billygood881@gmail.com.</p>
+<h2>Payment Method</h2>
+<p>Scan the following WeChat paycode. Enter a right amount of HKD for the exercises you want to purchase. For instance, if you wish to purchase the practices for MATH2102 and MATH4402, you should enter 100+80=180 HKD.</p>
+<p>After payment, please notify billygood881@gmail.com of your purchased courses and your <b>HKU email</b>. Access invitations will be sent to your university email shortly.</p>
+
+<p class="footer">Disclaimer: Our exam insights might contain flaws and should not be treated as solutions to past exams. We welcome discussion of the topics. For inquiries, contact us at billygood881@gmail.com.</p>
 
 </body>
 </html>
