--- a/Examsol.html
+++ b/Examsol.html
@@ -126,6 +126,7 @@
 
 <h2>Payment Method</h2>
 <p>Scan the following WeChat paycode. Enter a right amount of HKD for the exercises you want to purchase. For instance, if you wish to purchase the practices for MATH2102 and MATH4402, you should enter 100+80=180 HKD.</p>
+    <img src="images/Wechat Paycode.jpg" alt="WeChat Pay Code" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
 <p>After payment, please notify billygood881@gmail.com of your purchased courses and your <b>HKU email</b>. Access invitations will be sent to your university email shortly.</p>
 
 <p class="footer">Disclaimer: Our exam insights might contain flaws and should not be treated as solutions to past exams. We welcome discussion of the topics. For inquiries, contact us at billygood881@gmail.com.</p>
