Add meta description and keywords to Examsol.html
Added meta tags for SEO optimization.

--- a/Examsol.html
+++ b/Examsol.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Free Notes for HKU Mathematics Courses">
+    <meta name="keywords" content="HKU math, HKU mathematics courses, HKU math course notes, HKU math exam solution">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insights to MATH Exams</title>
     <link rel="stylesheet" href="styles.css">
