Add interest card for MATH2343 Discrete Structures

--- a/home.html
+++ b/home.html
@@ -184,6 +184,11 @@
           <p>2025-26 Fall</p>
         </div>
       </div>
+        <div class="interest-card">
+          <h3>MATH2343 Discrete Structures</h3>
+          <p>2025-26 Spring</p>
+        </div>
+      </div>
     </section>
 
     <!-- Writings Section -->
